No XML Signning or ENcryption with BasicHttpBinding, check the log file

--- a/SecurityClient/App.config
+++ b/SecurityClient/App.config
@@ -5,18 +5,19 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <wsHttpBinding>
-                <binding name="WSHttpBinding_ISecurityService" />
-            </wsHttpBinding>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_ISecurityService">
+                    <security mode="None">
+                        <transport clientCredentialType="None" />
+                        <message clientCredentialType="UserName" />
+                    </security>
+                </binding>
+            </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8080/SecurityService" binding="wsHttpBinding"
-                bindingConfiguration="WSHttpBinding_ISecurityService" contract="SecurityService.ISecurityService"
-                name="WSHttpBinding_ISecurityService">
-                <identity>
-                    <userPrincipalName value="UNBREAKABLE\lenovo" />
-                </identity>
-            </endpoint>
+            <endpoint address="http://localhost:8080/SecurityService" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_ISecurityService" contract="SecurityService.ISecurityService"
+                name="BasicHttpBinding_ISecurityService" />
         </client>
     </system.serviceModel>
 </configuration>
