--- a/SecurityHost/app.config
+++ b/SecurityHost/app.config
@@ -30,17 +30,17 @@
       <messageLogging logEntireMessage="true" logMalformedMessages="true"
         logMessagesAtTransportLevel="true" />
     </diagnostics>
-    <bindings>
+    <!--<bindings>
       <wsHttpBinding>
         <binding name="wsHttp">
-          <!--<security mode="None"></security>-->
+          --><!--<security mode="None"></security>--><!--
         </binding>
       </wsHttpBinding>
-      <!--<netTcpBinding>
+      --><!--<netTcpBinding>
         <binding name="netTCP">
         </binding>
-      </netTcpBinding>-->
-    </bindings>
+      </netTcpBinding>--><!--
+    </bindings>-->
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehavior">
@@ -51,7 +51,7 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="SecurityService.SecurityService">
-        <endpoint address="SecurityService" binding="wsHttpBinding" contract="SecurityService.ISecurityService" bindingConfiguration="wsHttp"/>
+        <endpoint address="SecurityService" binding="basicHttpBinding" contract="SecurityService.ISecurityService" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
