Windows Authentication wsHttpbinding

--- a/SecurityClient/App.config
+++ b/SecurityClient/App.config
@@ -5,19 +5,18 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISecurityService">
-                    <security mode="None">
-                        <transport clientCredentialType="None" />
-                        <message clientCredentialType="UserName" />
-                    </security>
-                </binding>
-            </basicHttpBinding>
+            <wsHttpBinding>
+                <binding name="WSHttpBinding_ISecurityService" />
+            </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8080/SecurityService" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ISecurityService" contract="SecurityService.ISecurityService"
-                name="BasicHttpBinding_ISecurityService" />
+            <endpoint address="http://localhost:8080/SecurityService" binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_ISecurityService" contract="SecurityService.ISecurityService"
+                name="WSHttpBinding_ISecurityService">
+                <identity>
+                    <userPrincipalName value="UNBREAKABLE\lenovo" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
