--- a/SecurityHost/app.config
+++ b/SecurityHost/app.config
@@ -51,7 +51,7 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="SecurityService.SecurityService">
-        <endpoint address="SecurityService" binding="basicHttpBinding" contract="SecurityService.ISecurityService" />
+        <endpoint address="SecurityService" binding="wsHttpBinding" contract="SecurityService.ISecurityService" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
