Message Based and Trasnport Based security and how to configure them

--- a/SecurityHost/app.config
+++ b/SecurityHost/app.config
@@ -30,17 +30,37 @@
       <messageLogging logEntireMessage="true" logMalformedMessages="true"
         logMessagesAtTransportLevel="true" />
     </diagnostics>
-    <!--<bindings>
-      <wsHttpBinding>
+    <bindings>
+      <!--<wsHttpBinding>
         <binding name="wsHttp">
-          --><!--<security mode="None"></security>--><!--
+          <security mode="None"></security>
         </binding>
-      </wsHttpBinding>
-      --><!--<netTcpBinding>
+      </wsHttpBinding>-->
+      <netTcpBinding>
         <binding name="netTCP">
+<!--Below we are configuring what security mode we want. if securoty is provided by default for example wsHttpBinding byuderfault
+privides the message layer security. in that case it will be there irrepective of whetehre we mention anything here but we 
+can always come here and configure it accordinglt-->
+          <!--<security mode="None"></security>
+          <security mode="Transport"></security>
+          <security mode="Message"></security>
+          <security mode="TransportWithMessageCredential"></security>-->
+          <security mode="Transport">
+            <!--<transport clientCredentialType="None"></transport>
+            <transport clientCredentialType="Windows"></transport>
+            <transport clientCredentialType="Certificate"></transport>-->
+          </security>
+
+          <security mode="Message">
+            <!--<message clientCredentialType="None"/>
+            <message clientCredentialType="Windows"/>
+            <message clientCredentialType="UserName"/>
+            <message clientCredentialType="Certificate"/>
+            <message clientCredentialType="IssuedToken"/>-->
+          </security>
         </binding>
-      </netTcpBinding>--><!--
-    </bindings>-->
+      </netTcpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehavior">
@@ -51,13 +71,16 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="SecurityService.SecurityService">
-        <endpoint address="SecurityService" binding="wsHttpBinding" contract="SecurityService.ISecurityService" />
+        <endpoint address="SecurityService" binding="netTcpBinding" contract="SecurityService.ISecurityService" bindingConfiguration="netTCP" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
+            <add baseAddress="net.tcp://localhost:8090"/>
           </baseAddresses>
         </host>
       </service>
     </services>
   </system.serviceModel>
 </configuration>
+
+<!--Here we are learning how to configure the mESSAGE AND TRASNPORT SECURITY-->
