--- a/SecurityClient/App.config
+++ b/SecurityClient/App.config
@@ -5,14 +5,16 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <wsHttpBinding>
-                <binding name="WSHttpBinding_ISecurityService" />
-            </wsHttpBinding>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_ISecurityService">
+                    <security mode="Transport" />
+                </binding>
+            </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8080/SecurityService" binding="wsHttpBinding"
-                bindingConfiguration="WSHttpBinding_ISecurityService" contract="SecurityService.ISecurityService"
-                name="WSHttpBinding_ISecurityService">
+            <endpoint address="net.tcp://localhost:8090/SecurityService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISecurityService"
+                contract="SecurityService.ISecurityService" name="NetTcpBinding_ISecurityService">
                 <identity>
                     <userPrincipalName value="UNBREAKABLE\lenovo" />
                 </identity>
